# MimiRadar

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: collect_ok_sources.py  run.py  validate_sources.py
src/mimiradar/: __init__.py  config.py  pipeline.py  sources.py  telegram.py
