[project]
name = "mimiradar"
version = "0.1.0"
description = "Content radar + Telegram publishing"
requires-python = ">=3.10"

dependencies = [
  "requests>=2.31",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

